<resources>
    <string name="app_name">Organizer</string>
    <string name="reminder_title_hint">Reminder title.</string>
    <string name="reminder_title_label">Title</string>
    <string name="reminder_details_label">Details</string>
    <string name="reminder_solved_label">Solved</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="date_picker_title">Choose time of notification</string>
    <string name="time_fialog_title">Choose time</string>
    <string name="new_reminder">Create</string>
    <string name="list_is_empty">List is empty</string>
    <string name="send_reminder">Send reminder</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="reminder_no_contact">no contact</string>
    <string name="reminder_report_contact">name is %s \n</string>
    <string name="reminder_report_contact_number"> telephone %s.</string>
    <string name="send_report">Send from Reminder: </string>
    <string name="reminder_report">Reminder</string>
    <string name="call_to_contact">Call</string>
    <string name="take_photo">Take photo</string>
    <string name="title_activity_organizer">OrganizerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="contact_info_name">%s \n </string>
    <string name="contact_info_number">%s</string>
    <string name="home_title">Home</string>
    <string name="moments_title">Search</string>
    <string name="notifications_title">Notification</string>
    <string name="messages_title">List</string>
    <string name="title_activity_main_organizer">MainOrganizerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">List</string>
    <string name="create_reminder">Create reminder</string>
    <string name="title_map">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="poi">poi</string>
    <string name="description_title_label">Description</string>
    <string name="position_label">%x %d</string>
    <string name="update_date_label">%s</string>
    <string name="image">image</string>
    <string name="close_string">Close</string>
    <string name="menu_rss">Network(RSS)</string>
    <string name="menu_map">Map</string>
    <string name="menu_room">Room</string>

    <string name="title_task_number">Task #%x</string>
    <string name="contact_info">%s \n %s</string>
</resources>
