<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/news_list">

    <fragment
        android:id="@+id/news_list"
        android:name="com.example.organizer.ui.home.NewsListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_news_list" >
        <action
            android:id="@+id/action_news_list_to_webFragment"
            app:destination="@id/webFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.organizer.ui.mapsfragment.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.organizer.ui.reminderlistfragment.ReminderListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_reminder_list" />
    <fragment
        android:id="@+id/webFragment"
        android:name="com.example.organizer.ui.webfragment.WebFragment"
        android:label="WebFragment"
        tools:layout="@layout/web_fragment">
        <argument
            android:name="web_link"
            app:argType="string" />
    </fragment>
</navigation>
