<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/reminder_title_label" />

        <EditText
            android:hint="@string/reminder_title_hint"
            android:id="@+id/reminder_title"
            android:inputType="textAutoCorrect"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/reminder_details_label" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:cropToPadding="true"
                android:id="@+id/reminder_photo"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contact_info"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/call_to_contact_button"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_call_call_24dp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_notification"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/reminder_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="Reminder"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/position_marker"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_marker"
                android:visibility="gone" />

            <EditText
                android:editable="false"
                android:focusable="true"
                android:id="@+id/position_coordinates"
                android:inputType="none"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_width="wrap_content"
                android:textIsSelectable="true"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:hint="@string/reminder_details_label"
            android:id="@+id/reminder_notes"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_label="Menu"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_photo_reminder_button"
            android:layout_gravity="bottom|right"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_add_a_photo_white_24dp"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPressed"
            fab:fab_colorRipple="@color/colorPrimaryDark"
            fab:fab_label="Add photo" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_contact_reminder_button"
            android:layout_gravity="bottom|right"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_person_add_white_24dp"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPressed"
            fab:fab_colorRipple="@color/colorPrimaryDark"
            fab:fab_label="Add contact" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/share_reminder_button"
            android:layout_gravity="bottom|right"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_share_white_24dp"

            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPressed"
            fab:fab_colorRipple="@color/colorPrimaryDark"
            fab:fab_label="Add share" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/notification_reminder_button"
            android:layout_gravity="bottom|right"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_notifications_none_white_24dp"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPressed"
            fab:fab_colorRipple="@color/colorPrimaryDark"
            fab:fab_label="Notification disabled" />
    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
